--- a/catBooks/src/app/home/home.component.html
+++ b/catBooks/src/app/home/home.component.html
@@ -4,7 +4,7 @@
               <img  class="img-fluid    d-none    d-sm-block"  src="assets/img/mais-cat.jpg" alt="Gato olhando fixamente">
         </div>
         <div  class="col-md-6">
-              <h2>Bem vindo!</h2>
+              <router-outlet></router-outlet>
         </div>
     </div>
 </div>
