--- a/catBooks/src/app/home/login/login.component.html
+++ b/catBooks/src/app/home/login/login.component.html
@@ -1,16 +1,22 @@
 <h4   class="text-center">Login</h4>
 
-<form class="form mt-4">
+<form class="form mt-4" (ngSubmit)="login()">
     <div  class="form-group">
         <input
             class="form-control"
-            placeholder="Nome do Usuário">
+            placeholder="Nome do Usuário"
+            [(ngModel)]="aUser"
+            name="user"
+        >
     </div>
     <div  class="form-group">
         <input
             type="password"
             class="form-control"
-            placeholder="Senha">
+            placeholder="Senha"
+            [(ngModel)]="aPassword"
+            name="password"
+        >
     </div>
     <button
             type="submit"
