--- a/catBooks/src/app/home/login/login.component.html
+++ b/catBooks/src/app/home/login/login.component.html
@@ -1,7 +1,7 @@
 <h4   class="text-center">Login</h4>
 
 <form class="form mt-4" (ngSubmit)="login()">
-    <div  class="form-group">
+    <div  class="form-group mb-2">
         <input
             class="form-control"
             placeholder="Nome do Usuário"
@@ -9,7 +9,7 @@
             name="user"
         >
     </div>
-    <div  class="form-group">
+    <div  class="form-group mb-2">
         <input
             type="password"
             class="form-control"
