--- a/catBooks/src/app/home/login/login.component.html
+++ b/catBooks/src/app/home/login/login.component.html
@@ -1,22 +1,34 @@
 <h4   class="text-center">Login</h4>
 
 <form class="form mt-4" (ngSubmit)="login()">
-    <div  class="form-group mb-2">
+    <div  class="form-group mb-4">
         <input
             class="form-control"
             placeholder="Nome do Usuário"
             [(ngModel)]="aUser"
             name="user"
-        >
+            #userField="ngModel"
+            required>
+
+        <app-messages
+            message=" Usuário obrigatório!"
+            *ngIf="userField.invalid">
+        </app-messages>
+
     </div>
-    <div  class="form-group mb-2">
+    <div  class="form-group mb-4">
         <input
             type="password"
             class="form-control"
             placeholder="Senha"
             [(ngModel)]="aPassword"
             name="password"
-        >
+            #passwordField="ngModel"
+            required>
+        <app-messages
+            message="Senha obrigatória!"
+            *ngIf="passwordField.invalid">
+        </app-messages>
     </div>
     <button
             type="submit"
