Added a new Component to User Registration
No functionality yet, just the navigation throughout RouterLink

--- a/catBooks/src/app/home/login/login.component.html
+++ b/catBooks/src/app/home/login/login.component.html
@@ -30,3 +30,5 @@
             [disabled]="loginForm.invalid"
     >Log in</button>
 </form>
+											<!--Also work with '/home/newUser' -->
+<p>Não tem um Usuário ainda?<a [routerLink]="['newUser']">Clique aqui</a></p>
