--- a/catBooks/src/app/home/user-registration/user-registration.component.html
+++ b/catBooks/src/app/home/user-registration/user-registration.component.html
@@ -1,17 +1,23 @@
 <h4   class="text-center">Crie um novo Usuário</h4>
 
-<form class="form mt-4" action="">
+<form class="form mt-4"
+		[formGroup]="newUserForm"
+		(submit)="register()">
     <div  class="form-group mb-3">
-        <input type="text"  placeholder="e-Mail"  class="form-control">
+        <input type="text"  placeholder="e-Mail"  class="form-control"
+				formGroupName="email">
     </div>
     <div  class="form-group mb-3">
-        <input type="text"  placeholder="Nome Completo"  class="form-control">
+        <input type="text"  placeholder="Nome Completo"  class="form-control"
+				formControlName="fullName">
     </div>
     <div  class="form-group mb-3">
-        <input type="text"  placeholder="Usuário"  class="form-control">
+        <input type="text"  placeholder="Usuário"  class="form-control"
+				formControlName="userName">
     </div>
     <div  class="form-group mb-3">
-        <input type="password"  placeholder="Senha"  class="form-control">
+        <input type="password"  placeholder="Senha"  class="form-control"
+				formControlName="password">
     </div>
     <div>
         <button   class="btn btn-primary btn-block">Cadastro</button>
