--- a/catBooks/src/app/shared/footer-template/footer-template.component.html
+++ b/catBooks/src/app/shared/footer-template/footer-template.component.html
@@ -1,12 +1,10 @@
-<p>footer-template works!</p>
-
 <footer					class="mt-5">
-	<div				class="fixed-botton		bg-white	p-1">
+	<div				class="fixed-bottom		bg-white	p-2">
 		<div			class="container">
-			<div		class="row				text-center">
+			<div		class="row				text-centert">
 				<div	class="col-6">
 					<a 		[routerLink]="['']">
-						<i		class="fa	fa-home		fa-2"></i>
+						<i		class="fa	fa-home		fa-2x"></i>
 					</a>
 				</div>
 			</div>
