--- a/catBooks/src/app/animals/image-card/image-card.component.html
+++ b/catBooks/src/app/animals/image-card/image-card.component.html
@@ -6,7 +6,7 @@
 		{{ title }}
 	</h4>
 	<div	class="card-block	text-justify">
-		<ng-content select="selector">
+		<ng-content>
 
 		</ng-content>
 	</div>
