--- a/catBooks/src/app/animals/image-grid/image-grid.component.html
+++ b/catBooks/src/app/animals/image-grid/image-grid.component.html
@@ -16,8 +16,8 @@
 				[imageDescription]="animal.description"
 			>
 			</app-animal-thumbnail>
-			<i	aria-hidden="true"	class="fa	fa-heart		fa-1x	mr-2">{{animal.likes}}</i>
-			<i	aria-hidden="true"	class="fa	fa-comments-o	fa-1x	mr-2">{{animal.comments}}</i>
+			<i	aria-hidden="true"	class="fa	fa-heart		fa-1x	mr-2"			>{{animal.likes}}</i>
+			<i	aria-hidden="true"	class="fa	fa-comments-o	fa-1x	mr-2	ml-2"	>{{animal.comments}}</i>
 		</app-image-card>
 	</div>
 </div>
