--- a/catBooks/src/app/animals/list-animals/list-animals.component.html
+++ b/catBooks/src/app/animals/list-animals/list-animals.component.html
@@ -1,1 +1,3 @@
-<app-image-grid [animals]="animals"></app-image-grid>
+<div *ngIf="animals$ | async as animals">
+	<app-image-grid [animals]="animals"></app-image-grid>
+</div>
