Fixing the Like methos at Details Component
Fixing the Comment Interface

Adding the Data.DB into .GitIgnore

--- a/catBooks/src/app/animals/details/details.component.html
+++ b/catBooks/src/app/animals/details/details.component.html
@@ -16,7 +16,7 @@
 				</p>
 				<i	(click)="like()"	class="fa fa-heart-o fa-2x mr-2 pull-left">{{animal.likes}}</i>
 				<i		class="fa fa-comment-o fa-2x mr-2">{{animal.comments}}</i>
-				<i	(click)="delete()"	class="fa fa-trash-o fa-2x mr-2 pull-right">{{animal.comments}}</i>
+				<i	(click)="delete()"	class="fa fa-trash-o fa-2x mr-2 pull-right"></i>
 			</small>
 		</div>
 	</div>
