--- a/catBooks/src/app/animals/details/details.component.html
+++ b/catBooks/src/app/animals/details/details.component.html
@@ -18,6 +18,12 @@
 				<i		class="fa fa-comment-o fa-2x mr-2">{{animal.comments}}</i>
 				<i	(click)="delete()"	class="fa fa-trash-o fa-2x mr-2 pull-right"></i>
 			</small>
+
+			<app-comments [id]="animalId" *ngIf="animal.allowComments; else warning">
+			</app-comments>
+			<ng-template #warning>
+				<p>Usuário não tem permissão para comentar</p>
+			</ng-template>
 		</div>
 	</div>
 </div>
