--- a/catBooks/src/app/animals/details/comments/comments.component.html
+++ b/catBooks/src/app/animals/details/comments/comments.component.html
@@ -1,15 +1,10 @@
-<p>comments works!</p>
-
 <div *ngIf="comments$ | async as comments">
 	<ul	class="list-unstyled comment-list">
 		<li	*ngFor="let comment of comments">
-			<p	class="text-dark font-weight-bold mr-1">
-				{{comment.userName}}
-			</p>
-			<em>
-				{{comment.date |  date:"dd/MM/yyyy HH:mm"}}
-			</em>
-			<p	class="break=word mb-2">{{comment.text}}</p>
+			<p	class="text-dark font-weight-bold mr-1">{{comment.userName}}</p>
+			<em>{{comment.date | date:"dd/MM/yyyy HH:mm"}}</em>
+			<p	class="break-word mb-2">{{comment.text}}</p>
+			<hr>
 		</li>
 	</ul>
 
@@ -19,7 +14,7 @@
 				<textarea class="form-control" formControlName="comment"></textarea>
 				<div	class="input-group-append">
 					<button [disabled]="commentForm.invalid"
-							class="btn-primary pull-left"
+							class="btn btn-primary pull-left"
 					>
 						Publicar
 					</button>
